--- a/sass/style.css
+++ b/sass/style.css
@@ -1,1 +1,21 @@
-/*# sourceMappingURL=style.css.map */
+.container {
+  width: 400px;
+  margin: auto;
+}
+
+h2 {
+  font-weight: 400;
+  font-size: small;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+h1 {
+  margin-bottom: 5px;
+}
+
+p:last-of-type {
+  margin-top: 30px;
+  font-weight: 300;
+  font-size: 13px;
+}/*# sourceMappingURL=style.css.map */
